--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -8,14 +8,18 @@
 
     <Button
         android:id="@+id/button_login1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="64dp"
+        android:layout_width="227dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="148dp"
+        android:background="#4CAF50"
         android:onClick="getJokes"
         android:text="New Jokes"
-        app:layout_constraintStart_toEndOf="@+id/txtPunch"
-        app:layout_constraintTop_toBottomOf="@+id/txtPunch" />
+        android:textColor="@color/purple_200"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/textPunch"
+        app:layout_constraintTop_toBottomOf="@+id/textPunch" />
 
     <TextView
         android:id="@+id/txtJokes"
@@ -24,15 +28,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:fontFamily="monospace"
-        android:text="Get New Jokes"
+        android:text="Jokes"
 
-        android:textSize="20sp"
+        android:textColor="@color/purple_700"
+        android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtType"
+        android:id="@+id/textType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -40,10 +46,10 @@
         android:text="TextView"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtID" />
+        app:layout_constraintTop_toBottomOf="@+id/textID" />
 
     <TextView
-        android:id="@+id/txtPunch"
+        android:id="@+id/textPunch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
@@ -51,10 +57,10 @@
         android:text="TextView"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtSetup" />
+        app:layout_constraintTop_toBottomOf="@+id/textSetup" />
 
     <TextView
-        android:id="@+id/txtID"
+        android:id="@+id/textID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -65,7 +71,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtSetup"
+        android:id="@+id/textSetup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -73,7 +79,7 @@
         android:text="TextView"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtType" />
+        app:layout_constraintTop_toBottomOf="@+id/textType" />
 
     <ProgressBar
         android:visibility="invisible"
@@ -84,6 +90,6 @@
         android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtType" />
+        app:layout_constraintTop_toBottomOf="@+id/textType" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
