--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_login1"
+        android:id="@+id/btn_NewJoke"
         android:layout_width="209dp"
         android:layout_height="76dp"
         android:layout_marginTop="520dp"
